--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+mysql==0.0.3
+mysqlclient==2.2.1
 orjson==3.9.12
 pydantic==2.5.3
 pydantic-extra-types==2.4.1
