--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.2.0
 certifi==2023.11.17
 click==8.1.7
 colorama==0.4.6
+configparser==6.0.0
 dnspython==2.5.0
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
@@ -16,6 +17,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
 mysql==0.0.3
+mysql-connector-python==8.3.0
 mysqlclient==2.2.1
 orjson==3.9.12
 pydantic==2.5.3
