--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dnspython==2.5.0
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 fastapi==0.109.0
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.2
 httptools==0.6.1
@@ -20,6 +21,7 @@ mysql==0.0.3
 mysql-connector-python==8.3.0
 mysqlclient==2.2.1
 orjson==3.9.12
+psycopg2==2.9.9
 pydantic==2.5.3
 pydantic-extra-types==2.4.1
 pydantic-settings==2.1.0
@@ -28,6 +30,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.6
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.25
 starlette==0.35.1
 typing_extensions==4.9.0
 ujson==5.9.0
