--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==4.2.0
+bcrypt==4.1.1
 certifi==2023.11.17
 click==8.1.7
 colorama==0.4.6
@@ -21,6 +22,7 @@ mysql==0.0.3
 mysql-connector-python==8.3.0
 mysqlclient==2.2.1
 orjson==3.9.12
+passlib==1.7.4
 psycopg2==2.9.9
 pydantic==2.5.3
 pydantic-extra-types==2.4.1
